# wordle-bot

./: LICENSE  README.md  main.py  pyproject.toml  stat.py  words.txt  words_guess.txt
wordle_bot/: bot.py  constants.py  heuristic_sort.py  stat.py
