[tool.poetry]
name = "wordle-bot"
version = "0.1.0"
description = "A stupidly simple script to play wordle."
authors = ["Aravind Vasudevan <aravind_vasudevan@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.0"
prettytable = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
